--- a/style.css
+++ b/style.css
@@ -21,3 +21,29 @@ button{
     border: none;
     background-color: white;
 }
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 90px;
+    text-align: center;
+    text-decoration: none;
+  }
+  
+  .fa:hover {
+    opacity: 0.7;
+  }
+  
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
+
+  .fa-twitter {
+    background: #55ACEE;
+    color: white;
+  }
+  .fa-linkedin{
+      background: #3e4381;
+      color:white
+  }
+  
